inclusão dos benefícios do TDD

--- a/documents/sbc-template.tex
+++ b/documents/sbc-template.tex
@@ -125,6 +125,36 @@ encorajando o desenvolvedor a executá-los mais frequentemente, até a execução de
 É vital que existam testes automatizados que sejam fáceis e rápidos de serem executados, 
 pois caso contrário, os testes serão executados poucas vezes 
 e os bugs serão descobertos de forma tardia no ciclo de desenvolvimento.
+As principais benefícios do TDD são:
+\begin{itemize}
+\item
+Diminuição de falhas: Erros grandes e pequenos de lógica, 
+e também falhas de design podem ser encontrados rapidamente durante o TDD, 
+ocorrendo a prevenção de defeitos.
+\item
+Menor tempo de debug: Tendo um menor número de falhas, 
+temos um menor tempo de debug.
+\item
+Documentação não mente: Com testes bem estruturados, 
+é possível analisar a qualidade da  documentação 
+Testes bem estruturados trazem uma forma de executável e inequívoca documentação, 
+onde um exemplo funcional equivale mais que 1.000 palavras.
+\item
+Paz de espírito: Um código exaustivamente testado com um conjunto abrangente 
+de testes de regressão traz estabilidade e confiança aos desenvolvedores, 
+trazendo conforto e melhores fins de semana.
+\item
+Aperfeiçoamento do design: Um bom design é um design testável. 
+Funções muito grandes, forte acoplamento, e complexas condicionais, 
+todos levam a um código mais complexo e menos testável. 
+O desenvolver percebem previamente uma falha de design caso os testes não podem ser implementados.
+\item
+Monitorar o Progresso: Os testes trazem exatamente um retrato 
+do que está funcionando e quanto do trabalho foi realizado.
+\item
+Divertido e gratificante: TDD traz imediatamente uma gratificação aos desenvolvedores. 
+A cada codificação testada, traz a garantia de que o software está funcionando.
+\end{itemize}
 
 \section{Test-First e Test-Last}
 
