--- a/documents/sbc-template.tex
+++ b/documents/sbc-template.tex
@@ -5,8 +5,7 @@
 \usepackage{graphicx,url}
 
 \usepackage[brazil]{babel}   
-\usepackage[latin1]{inputenc}  
-
+\usepackage[latin1]{inputenc}
      
 \sloppy
 
@@ -33,62 +32,47 @@
 \end{abstract}
      
 \begin{resumo} 
-  Este meta-artigo descreve o estilo a ser usado na confecção de artigos e
-  resumos de artigos para publicação nos anais das conferências organizadas
-  pela SBC. É solicitada a escrita de resumo e abstract apenas para os artigos
-  escritos em português. Artigos em inglês deverão apresentar apenas abstract.
-  Nos dois casos, o autor deve tomar cuidado para que o resumo (e o abstract)
-  não ultrapassem 10 linhas cada, sendo que ambos devem estar na primeira
-  página do artigo.
+	A proposta deste trabalho é apresentar o conceito de Test Driven Development,  
+	mostrar os benefícios que esta abordagem traz para os desenvolvedores.
+	É abordado também a revisão de código para análise e busca de falhas no 
+	código fonte, quebra na arquitetura do sistema, reimplementação de 
+	funcionalidades já existentes, melhorias de estética e padronização.
+	São apresentados os benefícios da utilização dessas metodologias e 
+	por fim um workflow de desenvolvimento em C/C++ baseado em TDD.
 \end{resumo}
 
 
 \section{Introdução}
 
-A proposta deste trabalho é apresentar o conceito de Test Driven Development, 
-os passos que devem ser seguidos para sua implementação, 
-mostrando os benefícios que esta abordagem traz para os desenvolvedores. 
-Apesar da ampla divulgação do TDD, notamos que na prática ele ainda é pouco adotado 
-no dia-a-dia dos desenvolvedores por causa do medo que o aprendizado
-e a dificuldade de configurar um sistema cause uma queda de produtividade.
-Com este trabalho pretendemos mostrar soluções simples, 
-gratuitas e eficientes que possibilitam, uma vez entendidos os conceitos básicos,  
-tirar proveito de todos os benefícios que um desenvolvimento dirigido a testes proporciona.
-
-\section{Test Driven Development} \label{sec:firstpage}
-
-Test Driven Development (TDD) é uma abordagem iterativa para desenvolvimento de software 
+\textit{Test Driven Development} (TDD) é uma abordagem iterativa para desenvolvimento de software 
 baseada em testes automatizados. 
-A idéia é aplicar pequenos ciclos de teste--codificação--refatoração, 
+A idéia é aplicar pequenos ciclos de \textbf{teste--codificação--refatoração}, 
 também conhecido como \textit{red--green--refactor} que consiste em criar um teste unitário que
 faça falhar o código desenvolvido (\textit{Red}), alterar o código para que o teste passe da
 forma mais simples (\textit{Green}) e refatorar o código com o objetivo de melhorar a sua
-estrutura e design (\textit{Refactor}), eliminando duplicação, deixando o código da melhor
-possível.Este ciclo deve ser repetido em pequenos incrementos, até que a funcionalidade esteja pronta.\\
-Escrever o teste antes, prática conhecida como \textit{test--first}, obrigatoriamente força com que o código
-produzido seja testável por construção, e código produzido seja testável implica código com baixo
-acoplamento, aspecto extremamente importante no desing de software.\\
-A idéia principal é que o desenvolvedor deva começar a partir do código mais simples possível, 
-com a garantia que já esteja testado. Assim em cada iteração, 
-a complexidade vai aumentado aos poucos, porém com a certeza que há corretude em cada implementação.\\
-Cada passo traz um benefício. Escrever o teste antes, prática conhecida como Test First, 
+estrutura e design (\textit{Refactor}).
+Este ciclo deve ser repetido em pequenos incrementos, até que a funcionalidade esteja pronta.\\
+Assim em cada iteração, a complexidade vai aumentado aos poucos, porém com a certeza 
+que há corretude em cada implementação.\\
+Cada passo traz um benefício. Escrever o teste antes, prática conhecida como \textit{Test First}, 
 obrigatoriamente força com que o código produzido seja testável por construção, 
 e código testável implica código com baixo acoplamento, aspecto extremamente importante no design de software.\\ 
 Ao escrever testes previamente, faz com que o desenvolvedor pense antecipadamente no comportamento que a 
 aplicação deve ter, antes de mesmo de escrever algum código. 
 Desde a implementação, o projeto terá um nível de qualidade maior, 
 já que esta técnica força pensar em problemas e suas soluções antes de qualquer código existir.\\
-Além disso, traz feedback imediato a cada refatoração, e também suprime o \textit{over--engineering}, ou seja, implementar mais do que o estritamente necessário.\\
-O feedback acontece a cada ciclo desses, dando uma margem de segurança ao desenvolvedor, 
+Além disso, traz feedback imediato a cada refatoração, e também suprime o \textit{over--engineering}, 
+ou seja, implementar mais do que o estritamente necessário.\\
+O feedback acontece a cada ciclo, dando uma margem de segurança ao desenvolvedor, 
 de o que está sendo implementado além de correto é necessário. 
 TDD pode ser aplicado tanto para pequenas partes que compõem um sistema (Teste Unitários)
 quanto para componentes (Testes de Integração), e traz benefícios tanto em design quanto em performance, 
-pois dependendo da Arquitetura de Teste aplicada que garanta uma boa cobertura de testes, 
+pois depende da Arquitetura de Teste aplicada para garantir uma boa cobertura de testes, 
 tem-se um tempo relativamente menor na resolução de falhas do sistema total.\\
 Além de diminuir o custo na fase de manutenção do sistema, 
 oferece também uma margem de segurança maior aos desenvolvedores.\\
 Os testes automatizados também podem funcionar como uma forma de documentação, 
-pois estão descrevendo como partes do sistema se comportam.\\
+pois estão descrevendo em partes o comportamento do sistema, suas interfaces, métodos e arquitetura.\\
 TDD é entendido como um dos princípios da Extreme Programming (XP).
 
 \section{Testes Automatizados}
@@ -134,25 +118,25 @@ Funções muito grandes, forte acoplamento, e complexas condicionais,
 todos levam a um código mais complexo e menos testável. 
 O desenvolver percebem previamente uma falha de design caso os testes não podem ser implementados.
 \item
-Monitorar o Progresso: Os testes trazem exatamente um retrato 
+Monitorar o progresso: Os testes trazem exatamente um retrato 
 do que está funcionando e quanto do trabalho foi realizado.
 \item
-Divertido e gratificante: TDD traz imediatamente uma gratificação aos desenvolvedores. 
+Feedback imediato: TDD traz imediatamente uma gratificação aos desenvolvedores. 
 A cada codificação testada, traz a garantia de que o software está funcionando.
 \end{itemize}
 
 \section{Test-First e Test-Last}
 
 Há duas abordagens em relação aos teste unitários, 
-que são o Test-First que força que o código de teste seja produzido antes 
-da implementação do algoritmo, e o Test-Last que ao inverso, 
+que são o \textit{Test-First} que força que o código de teste seja produzido antes 
+da implementação do algoritmo, e o \textit{Test-Last} que ao inverso, 
 é a elaboração do teste unitário após a conclusão do algoritmo a ser testado.\\
 \cite{erdogmus:05}, resolveram investigar, por meio de um experimento 
-as diferenças entre as abordagens Test-First e Test-Last. 
+as diferenças entre as abordagens \textit{Test-First} e \textit{Test-Last}. 
 O experimento consiste em dois grupos em meio acadêmico, 
 cada qual usando umas das abordagens. 
 As conclusões foram as seguintes: 
-o grupo Test-First acabou escrevendo 52\% mais testes do que o grupo Test-Last, 
+o grupo \textit{Test-First} acabou escrevendo 52\% mais testes do que o grupo \textit{Test-Last}, 
 algo bastante significativo. 
 Em termos de qualidade externa, pelo estudo, não pareceu haver diferença entre os dois métodos. 
 Houveram evidências de que a qualidade externa estaria mais relacionada ao números de testes escritos do que quando estes são escritos. 
@@ -189,6 +173,11 @@ Além disso, o risco da abordagem Test-Last está na perda do benefício da program
 ou seja, evoluir o software a partir do ponto de vista de como se espera que seja usado, 
 e também a ocorrência em demasia de over-engineering, 
 isto é, escrever código para coisas que talvez não sejam necessárias naquele momento. 
+
+\section{Revisão de código fonte}
+
+
+
 
 \subsection{Subsections}
 
