inserido parte do capitulo sobre revisão de código

--- a/documents/sbc-template.bib
+++ b/documents/sbc-template.bib
@@ -30,5 +30,14 @@
   title = 	 {On the effectiveness of test--first approach to programming},
   jornal = 	 {IEEE Transactions on Software Engineering},
   year = 	 {2005},
-  URL = {http://bai-conference.org/BAI2011/Papers/8.Others/8142.pdf},
+  URL = {http://bai-conference.org/BAI2011/Papers/8.Others/8142.pdf}
+}
+
+@Book{jones:07,
+  author =	{Jones, Capers},
+  title =	{Code Reviews and Defect Removal},
+  booktitle =	{Estimating Software Costs},
+  publisher =	{McGraw-Hill,New York},
+  year =		{2007},
+  edition =	{2nd}
 }
